--- a/docs/.vitepress/theme/styles/code.css
+++ b/docs/.vitepress/theme/styles/code.css
@@ -16,7 +16,7 @@ code .token.inserted {
   color: var(--c-brand);
 }
 
-div[class*='language-'] {
+div[class*="language-"] {
   position: relative;
   margin: 1rem 0;
   background-color: var(--code-bg-color);
@@ -24,12 +24,12 @@ div[class*='language-'] {
   overflow-x: auto;
 }
 
-li > div[class*='language-'] {
+li > div[class*="language-"] {
   border-radius: 6px 0 0 6px;
   margin: 1rem -1.5rem 1rem -1.25rem;
 }
 
-[class*='language-'] code {
+[class*="language-"] code {
   color: #000;
   padding: 0;
 }
@@ -38,8 +38,8 @@ pre code {
   background: transparent;
 }
 
-[class*='language-'] pre,
-[class*='language-'] code {
+[class*="language-"] pre,
+[class*="language-"] code {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -52,7 +52,7 @@ pre code {
   hyphens: none;
 }
 
-[class*='language-'] pre {
+[class*="language-"] pre {
   position: relative;
   z-index: 1;
   margin: 0;
@@ -61,7 +61,7 @@ pre code {
   overflow-x: auto;
 }
 
-[class*='language-'] code {
+[class*="language-"] code {
   padding: 0;
   line-height: var(--code-line-height);
   font-size: var(--code-font-size);
@@ -85,12 +85,12 @@ pre code {
 }
 
 .highlight-lines .highlighted {
-  background-color: rgba(0, 0, 0, .66);
+  background-color: #ebeff3;
 }
 
 /* Line numbers mode */
 
-div[class*='language-'].line-numbers-mode {
+div[class*="language-"].line-numbers-mode {
   padding-left: 3.5rem;
 }
 
@@ -99,7 +99,7 @@ div[class*='language-'].line-numbers-mode {
   top: 0;
   bottom: 0;
   left: 0;
-  border-right: 1px solid rgba(0, 0, 0, .5);
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
   width: 3.5rem;
   text-align: center;
   line-height: 1.5;
