--- a/packages/codeMirror/index.less
+++ b/packages/codeMirror/index.less
@@ -4,7 +4,7 @@
   height: 100%;
   width: fit-content;
   font-size: 12px;
-  overflow: hidden;
+  overflow: auto;
   &.bordered {
     border-radius: 4px;
     border: 1px solid #dddddd;
@@ -32,6 +32,7 @@
 .CodeMirror-merge,
 .CodeMirror-merge-right .CodeMirror {
   height: 100%;
+  border: none !important;
 }
 .editor_custom_link {
   cursor: pointer;
