--- a/packages/codeMirror/index.less
+++ b/packages/codeMirror/index.less
@@ -4,7 +4,7 @@
   height: 100%;
   width: fit-content;
   font-size: 12px;
-  overflow: auto;
+  overflow: hidden;
   &.bordered {
     border-radius: 4px;
     border: 1px solid #dddddd;
