--- a/packages/src/style/index.css
+++ b/packages/src/style/index.css
@@ -20,42 +20,42 @@
 .codemirror-container.height-auto .cm-s-default {
   height: 100% !important;
 }
-.CodeMirror-lines .CodeMirror-placeholder.CodeMirror-line-like {
-  color: #666;
-}
-.CodeMirror,
-.CodeMirror-merge-pane {
-  height: 100%;
-  font-family: consolas !important;
-}
-.CodeMirror-merge,
-.CodeMirror-merge-right .CodeMirror {
-  height: 100%;
-  border: none !important;
-}
-.editor_custom_link {
+.codemirror-container .editor_custom_link {
   cursor: pointer;
   color: #1474f1;
   text-decoration: underline;
 }
-.editor_custom_link:hover {
+.codemirror-container .editor_custom_link:hover {
   color: #04b4fa;
 }
-.c-editor--log__error {
+.codemirror-container:not(.original-style) .CodeMirror-lines .CodeMirror-placeholder.CodeMirror-line-like {
+  color: #666;
+}
+.codemirror-container:not(.original-style) .CodeMirror,
+.codemirror-container:not(.original-style) .CodeMirror-merge-pane {
+  height: 100%;
+  font-family: consolas !important;
+}
+.codemirror-container:not(.original-style) .CodeMirror-merge,
+.codemirror-container:not(.original-style) .CodeMirror-merge-right .CodeMirror {
+  height: 100%;
+  border: none !important;
+}
+.codemirror-container:not(.original-style) .c-editor--log__error {
   color: #bb0606;
   font-weight: bold;
 }
-.c-editor--log__info {
+.codemirror-container:not(.original-style) .c-editor--log__info {
   color: #333333;
   font-weight: bold;
 }
-.c-editor--log__warning {
+.codemirror-container:not(.original-style) .c-editor--log__warning {
   color: #ee9900;
 }
-.c-editor--log__success {
+.codemirror-container:not(.original-style) .c-editor--log__success {
   color: #669600;
 }
-.cm-header,
-.cm-strong {
+.codemirror-container:not(.original-style) .cm-header,
+.codemirror-container:not(.original-style) .cm-strong {
   font-weight: bold;
 }
