--- a/docs/demo/examples/Interactive/template.pug
+++ b/docs/demo/examples/Interactive/template.pug
@@ -15,16 +15,13 @@ import { Editor, EditorConfiguration } from "codemirror";
 import Codemirror from "codemirror-editor-vue3";
 // mode
 %langPath%
-
 %themePath%
-
-
 const code = ref(`%code%`);
 
 const cmOptions: EditorConfiguration = reactive({
   mode: "%lang%",
   theme: "%theme%",
-  readOnly: "%readOnly%",
+  readOnly: %readOnly%,
   lineNumbers: true,
   lineWiseCopyCut: true,
   gutters: ["CodeMirror-lint-markers"],
